# safe-robots

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  cppcheck-suppress.txt
core/: .clang-tidy  .cmake-format  CMakeLists.txt  Makefile  cppcheck-suppress.txt  package.xml
core/app/: CMakeLists.txt  add_app.cpp  logger_app.cpp  pipeline_app.cpp  server_app.cpp
core/cmake/: CompilerWarnings.cmake  MacroOutOfSourceBuild.cmake  StaticAnalyzers.cmake
core/docs/: CMakeLists.txt  main_page.md
core/include/core/: add.hpp
core/include/core/algorithm/: complementary_filter.hpp  madgwick.hpp
core/include/core/hardware/: model.hpp
core/include/core/math/: dcm.hpp  dcm2.hpp  math.hpp  matx.hpp  quaternion.hpp  transformation.hpp  vector.hpp
core/include/core/sensors/: module_sensor.hpp  module_sensor_imu.hpp
core/include/core/utils/: cash.hpp  clock.hpp  data.hpp  data_logger.hpp  data_struct copy.hpp  data_struct.hpp  data_struct_template.hpp  date_time.hpp  event_level.hpp  exception.hpp  formatter.hpp  formatter2.hpp  labeld_modifier.hpp  logger.hpp  logger_helper.hpp  logger_macros.hpp  logger_node.hpp  logger_stream.hpp  math.hpp  min_max_statistics.hpp  modifier.hpp  module.hpp  node.hpp  node_logger.hpp  server_socket.hpp  socket.hpp  socket_exception.hpp  spinner.hpp  subject.hpp  system.hpp  terminal.hpp  time.hpp  timer.hpp  writer.hpp  writer_console.hpp  writer_file.hpp  writter.hpp  writter_console.hpp  writter_file.hpp
core/include/dependencies/: entree.hpp  simple_logger.hpp  yaml.hpp
core/include/hardware/navio/: mpu9250.hpp
core/src/: CMakeLists.txt
core/src/core/: CMakeLists.txt  add.cpp
core/src/core/algorithm/: complementary_filter.cpp  madgwick.cpp
core/src/core/hardware/: model.cpp
core/src/core/math/: dcm.cpp  math.cpp  quaternion.cpp  transformation.cpp  vector.cpp
core/src/core/sensors/: CMakeLists.txt  _CMakeLists.txt  module_sensor.cpp  module_sensor_imu.cpp
core/src/core/utils/: CMakeLists.txt  OLD_CMakeLists.txt  clock.cpp  data.cpp  data_struct.cpp  date_time.cpp  event_level.cpp  formatter.cpp  labeld_modifier.cpp  logger.cpp  logger_node.cpp  logger_stream.cpp  math.cpp  modifier.cpp  module.cpp  node.cpp  node_logger.cpp  server_socket.cpp  socket.cpp  spinner.cpp  system.cpp  terminal.cpp  time.cpp  timer.cpp  writer.cpp  writer_console.cpp  writer_file.cpp  writter_console.cpp  writter_file.cpp
core/src/dependencies/: CMakeLists.txt  entree.cpp  yaml.cpp
core/src/hardware/navio/: CMakeLists.txt  mpu9250.cpp
core/test/: CMakeLists.txt  add_utest.cpp
core/test/cmake/: AddTestWithLibraries.cmake
core/test/core/: CMakeLists.txt
core/test/core/math/: CMakeLists.txt  math_utils.cpp  math_utils.hpp  utest_dcm.cpp  utest_math.cpp  utest_quaternion.cpp  utest_transformation.cpp  utest_vector.cpp
core/test/core/sensors/: CMakeLists.txt  utest_module_sensor.cpp  utest_module_sensor_imu.cpp
core/test/core/utils/: utest_cash.cpp  utest_clock.cpp  utest_data.cpp  utest_data_logger.cpp  utest_data_struct.cpp  utest_date_time.cpp  utest_event_level.cpp  utest_formatter.cpp  utest_formatter2.cpp  utest_labeld_modifier.cpp  utest_logger.cpp  utest_logger_macros.cpp  utest_logger_node.cpp  utest_logger_stream.cpp  utest_modifier.cpp  utest_node.cpp  utest_subject.cpp  utest_time.cpp  utest_timer.cpp  utest_writer.cpp  utils.cpp  utils.hpp  utils_clock.hpp  utils_data.cpp  utils_data.hpp
core/test/dependencies/: CMakeLists.txt  utest_entree.cpp  utest_simple_logger.cpp  utest_yaml.cpp
core/test/include/utest/: utest_data.hpp  utils.hpp  utils_data.hpp
core/test/math/: CMakeLists.txt  main.cpp  utest_dcm.cpp  utest_math.cpp  utest_quaternion old.cpp  utest_quaternion.cpp  utest_transformation.cpp  utest_utils.cpp  utest_utils.hpp  utest_vector.cpp
core/test/math/algorithm/: CMakeLists.txt  utest_complementary_filter.cpp
core/test/math/my_math/: CMakeLists.txt  dcm.cpp  dcm.hpp  matx.hpp  quaternion.cpp  quaternion.hpp  transformation.cpp  transformation.hpp  vector.cpp  vector.hpp
core/test/sensors/: CMakeLists.txt  utest_module_sensor.cpp  utest_module_sensor_imu.cpp
core/test/utils/: CMakeLists.txt  utest_cash.cpp  utest_clock.cpp  utest_data.cpp  utest_data.hpp  utest_data_logger.cpp  utest_data_struct.cpp  utest_date_time.cpp  utest_event_level.cpp  utest_exception.cpp  utest_formatter.cpp  utest_formatter2.cpp  utest_labeld_modifier.cpp  utest_logger.cpp  utest_logger_macros.cpp  utest_logger_node.cpp  utest_logger_stream.cpp  utest_math.cpp  utest_min_max_statistics.cpp  utest_modifier.cpp  utest_module.cpp  utest_node.cpp  utest_node_logger.cpp  utest_subject.cpp  utest_system.cpp  utest_terminal.cpp  utest_timer.cpp  utest_writer.cpp  utest_writter.cpp  utils.cpp  utils.hpp  utils_data.cpp  writter_console.cpp
core/utils/: clang-format  cmake-format
dependencies/: CMakeLists.txt  Makefile
docs/: CMakeLists.txt  Doxyfile.in  main_page.md
hardware/: CMakeLists.txt
hardware/app/: CMakeLists.txt  imu_server.cpp
hardware/app/bbb/: CMakeLists.txt  app.cpp  app.hpp  app_utils.cpp  app_utils.hpp  bbb_imu_app.cpp  bbb_imu_recorder.cpp  bbb_imu_server.cpp
hardware/app/common/: imu_app.cpp
hardware/bbb/: CMakeLists.txt
hardware/bbb/app/: CMakeLists.txt  app.hpp  imu_app.cpp  imu_server.cpp  rc_calibrate_accel.cpp  rc_calibrate_gyro.cpp  rc_calibrate_mag.cpp  rc_mpu.cpp
hardware/bbb/src/: CMakeLists.txt
hardware/bbb/test/: CMakeLists.txt
hardware/include/bbb/: utils.hpp
hardware/include/common/: literals.hpp  utils.hpp
hardware/include/navio/: utils.hpp
hardware/navio/: CMakeLists.txt
hardware/navio/app/: CMakeLists.txt  app.hpp  imu_app.cpp  imu_server.cpp  mpu_app.cpp  mpu_server.cpp  my_mpu_app.cpp  my_mpu_server.cpp  old_imu_app.cpp
hardware/navio/src/: CMakeLists.txt  _mpu9250.cpp  mpu9250.cpp  old_mpu9250.cpp  spidev.cpp  util.cpp
hardware/src/bbb/: CMakeLists.txt  utils.cpp
hardware/src/common/: CMakeLists.txt  utils.cpp
hardware/src/navio/: CMakeLists.txt  utils.cpp
matlab/: client.m  (+5 more)
(+130 files in other folders)
