# ##############################################################################
# Libraries
# ##############################################################################
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/core/utils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/core/sensors)
if(0)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hardware/navio)    
endif()
